@@ -12,6 +12,7 @@ performance improvements:
   1e+06/MAX(maximal absolute coefficient, 1.0) instead of 1e+03/MAX(maximal absolute coefficient, 1.0);
   if all coefficients are in absolute value equal they will be scaled by that
 - if probing reached the end of all variables it will restart the probing cycle correctly
+- improved intdiving heuristic by activating backtracking to a different fixing value
 
 parameters:
 - changed default value of parameter <presolving/inttobinary/maxrounds> to 0
